implemented relate and add

--- a/demos.ipynb
+++ b/demos.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -24,63 +15,92 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tree = DynasticDescent()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Matt_1': <person.Person at 0x7f9b0d794210>,\n",
+       " 'Davide_2': <person.Person at 0x7f9b0d794190>}"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tree.tree"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Added MATT to the family tree!\n"
+      "Matt not in tree; adding!\n",
+      "Added MATT to the family tree!\n",
+      "Davide not in tree; adding!\n",
+      "Added DAVIDE to the family tree!\n"
      ]
     }
    ],
    "source": [
     "matt = Person('Matt')\n",
     "davide = Person('Davide')\n",
-    "\n",
-    "tree = DynasticDescent()\n",
-    "\n",
-    "tree.add_person(matt)"
+    "tree.add_child(matt, davide)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bob = Person('Bob')\n",
+    "sara = Person('Sara')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Davide is already in the tree! Key: Davide_2\n"
+      "Bob not in tree; adding!\n",
+      "Added BOB to the family tree!\n",
+      "Sara not in tree; adding!\n",
+      "Added SARA to the family tree!\n"
      ]
     }
    ],
    "source": [
-    "tree.add_person(davide)"
+    "tree.relate(parent=bob, child=sara)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'asdf' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-28-7d97e98f8af7>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0masdf\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'asdf' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "asdf"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
